--- a/tasks/templates/teams/detail.html
+++ b/tasks/templates/teams/detail.html
@@ -1,36 +1,38 @@
-{% extends 'tasks/base.html' %}
+{% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+
     {% block body %}
-        <h1>{{ task.title }}</h1>
-        <h2>{{ task.status }}</h2>
-        <h3>{{ task.description }}</h3>
-        <h3>{{ task.users }}</h3>
-        <h3>{{ task.teams }}</h3>
-        <h3>{{ task.subtasks }}</h3>
-        <h4>{{ task.created_at}}</h4>
-        <h4>{{ task.updated_at}}</h4>
-        <h4>{{ task.deadline}}</h4>
+    <h1>Team: {{ team.name }}</h1>
+
+    <h3>Members:</h3>
+    <ul>
+        {% for user in team.users.all %}
+        <li>{{ user.username }}</li>
+        {% empty %}
+        <li>No users in this team.</li>
+        {% endfor %}
+    </ul>
+
+    <h3>Tasks Assigned to This Team:</h3>
+    <ul>
+        {% for task in team.tasks.all %}
+        <li>{{ task.title }} - {{ task.status }}</li>
+        {% empty %}
+        <li>No tasks assigned to this team.</li>
+        {% endfor %}
+    </ul>
     {% endblock %}
-    
+
+
 </body>
+
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
