--- a/tasks/templates/users/detail.html
+++ b/tasks/templates/users/detail.html
@@ -13,32 +13,45 @@
     {% block body %}
     <!-- user is UserProfile object-->
     <!-- user.user is User object-->
-    <h1>User: {{ user.user.username }}</h1>
+    <div class="row">   
+    
+        <div class="col-md-6">
+            <img src="{{ user.image }}" class="card" height="25rem" alt="">
+        </div>
 
-    {% if user.description %}
-    <p><strong>Description:</strong> {{ user.description }}</p>
-    {% endif %}
+        <div class="col-md-6">
+            <h1>User: {{ user.user.username }}</h1>
+            {% if user.description %}
+            <p><strong>Description:</strong> {{ user.description }}</p>
+            {% endif %}
+        </div>
+        
+        <div class="col-md-6">
+           <h3>Teams:</h3>
+        <ul>
+            {% for team in user.user.teams.all %}
+            <li>{{ team.name }}</li>
+            {% empty %}
+            <li>This user is not part of any team.</li>
+            {% endfor %}
+        </ul> 
+        </div>
 
-    <h3>Teams:</h3>
-    <ul>
-        {% for team in user.user.teams.all %}
-        <li>{{ team.name }}</li>
-        {% empty %}
-        <li>This user is not part of any team.</li>
-        {% endfor %}
-    </ul>
+        <div class="col-md-6">
+            <h3>Assigned Tasks:</h3>
+            <ul>
+                {% for task in user.user.tasks.all %}
+                <li>{{ task.title }} - {{ task.status }}</li>
+                {% empty %}
+                <li>No tasks assigned to this user.</li>
+                {% endfor %}
+            </ul>
+        </div>
 
-    <h3>Assigned Tasks:</h3>
-    <ul>
-        {% for task in user.user.tasks.all %}
-        <li>{{ task.title }} - {{ task.status }}</li>
-        {% empty %}
-        <li>No tasks assigned to this user.</li>
-        {% endfor %}
-    </ul>
+        
+
+    </div>
     {% endblock %}
-
-
 </body>
 
 </html>
