--- a/tasks/templates/users/detail.html
+++ b/tasks/templates/users/detail.html
@@ -16,7 +16,7 @@
     <div class="row">   
     
         <div class="col-md-6">
-            <img src="{{ user.image }}" class="card" height="25rem" alt="">
+            <img src="{{ user.image }}" class="card img-fluid" height="25rem" alt="">
         </div>
 
         <div class="col-md-6">
