--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -16,12 +16,24 @@
 <body>
     <header>
         <nav class="navbar navbar-dark bg-dark">
-            <a href="/" class="navbar-brand ms-3">Task Management App</a>
-
+            <a href="/" class="navbar-brand ms-3">FoodApp</a>
+            
             <div class="navbar-nav flex-row ms-auto me-3">
-                <a class="nav-link px-3" href="#">Add Item</a>
+                <a class="nav-link px-3" href="{% url 'task:create_task' %}">Add Task</a>
                 <a class="nav-link px-3" href="#">Delete Item</a>
                 <a class="nav-link px-3" href="#">View Item</a>
+
+                {% if user.is_authenticated %}<!-- if you try to use get for Logout it will cause security problems sooo use Form instead of <a> -->
+                    <form method="POST" action="{% url 'logout' %}" style="display: inline;">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-link nav-link px-3">
+                            Logout
+                        </button>
+                    </form>  
+                {% else %} 
+                <a class="nav-link px-3" href="{% url 'login' %}">Login</a>
+                <a class="nav-link px-3" href="{% url 'register' %}">Register</a>
+                {% endif %}
             </div>
         </nav>
 
