--- a/tasks/templates/users/user-form.html
+++ b/tasks/templates/users/user-form.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <form method="POST">
-        {% csrf_token %} <!-- this tag is used for security -->
-        {{form}}
-        <button type="submit">Save</button>
-    </form>
+<main class="container my-5">
+  <form method="POST" class="card p-4 shadow-sm">
+    {% csrf_token %} <!-- this tag is used for security -->
+    
+    {{ form.as_p }}
+
+    <button type="submit" class="btn btn-primary mt-3">Save</button>
+  </form>
+</main>
 {% endblock %}
