--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,5 +1,6 @@
 <form method="POST">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">Login</button>
+  {% csrf_token %} {{ form }}
+  <button type="submit">Login</button>
 </form>
+
+<p>You don't have an account? <a href="/register/">Register</a></p>
