--- a/tasks/templates/teams/detail.html
+++ b/tasks/templates/teams/detail.html
@@ -41,6 +41,13 @@
           </li>
           {% endfor %}
         </ul>
+
+        <!-- Update & Delete Buttons -->
+        <div class="mt-4">
+          <a href="{% url 'task:update_team' team.id %}" class="btn btn-warning me-2">Update</a>
+          <a href="{% url 'task:delete_team' team.id %}" class="btn btn-danger">Delete</a>
+        </div>
+
       </div>
     </main>
     {% endblock %}
