--- a/tasks/templates/users/detail.html
+++ b/tasks/templates/users/detail.html
@@ -38,6 +38,12 @@
                     <li class="list-group-item text-muted">No tasks assigned.</li>
                     {% endfor %}
                 </ul>
+
+                <hr>
+                <div class="mt-3">
+                    <a href="{% url 'task:update_user' profile.id %}" class="btn btn-warning me-2">Update User Profile</a>
+                    <a href="{% url 'task:delete_user' profile.id %}" class="btn btn-danger">Delete</a>
+                </div>
             </div>
         </div>
     </div>
