--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,6 +1,21 @@
-<form method="POST">
-  {% csrf_token %} {{ form }}
-  <button type="submit">Login</button>
-</form>
+{% extends 'base.html' %}
 
-<p>You don't have an account? <a href="/register/">Register</a></p>
+{% block body %}
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 80vh;">
+  <div class="card p-4 shadow" style="min-width: 320px; max-width: 400px; width: 100%;">
+    <h3 class="text-center mb-4">Login</h3>
+
+    <form method="POST">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <div class="d-grid">
+        <button type="submit" class="btn btn-primary">Login</button>
+      </div>
+    </form>
+
+    <p class="mt-3 text-center">
+      Don't have an account? <a href="{% url 'register' %}">Register</a>
+    </p>
+  </div>
+</div>
+{% endblock %}
