--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,5 +1,21 @@
-<form method="POST">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">Signup</button>
-</form>
+{% extends 'base.html' %}
+
+{% block body %}
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 80vh;">
+  <div class="card p-4 shadow" style="min-width: 320px; max-width: 800px; width: 100%;">
+    <h3 class="text-center mb-4">Create an Account</h3>
+
+    <form method="POST">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <div class="d-grid">
+        <button type="submit" class="btn btn-primary">Sign Up</button>
+      </div>
+    </form>
+
+    <p class="mt-3 text-center">
+      Already have an account? <a href="{% url 'login' %}">Log in here</a>
+    </p>
+  </div>
+</div>
+{% endblock %}
