--- a/tasks/templates/tasks/detail.html
+++ b/tasks/templates/tasks/detail.html
@@ -13,11 +13,14 @@
 
     <!-- Assigned users list -->
     <h3>Assigned Users:</h3>
-    <ul class="list-group mb-3">
+    
+    <ul class="list-group mb-3 rowList" >
       {% for user in task.users.all %}
-        <a href="{% url 'task:detail_user' user.id %}" class="btn btn-outline-primary me-2 mb-2">
+      <li>
+        <a href="{% url 'task:detail_user' user.id %}" class="btn btn-outline-primary me-2 mb-2" >
             {{ user.username }} (ID: {{ user.id }})
         </a>
+      </li>
       {% empty %}
         <li class="list-group-item text-muted">No users assigned.</li>
       {% endfor %}
@@ -25,19 +28,23 @@
 
     <!-- Related teams list -->
     <h3>Related Teams:</h3>
-    <ul class="list-group mb-3">
+    <ul class="list-group mb-3 rowList">
       {% for team in task.teams.all %}
-      <li class="list-group-item">{{ team.name }}</li>
+      <li>
+        <a href="{% url 'task:detail_team' team.id %}" class="btn btn-outline-primary me-2 mb-2">{{ team.name }}</a>
+      </li>
       {% empty %}
-      <li class="list-group-item text-muted">No teams assigned.</li>
+        <li class="list-group-item text-muted">No teams assigned.</li>
       {% endfor %}
     </ul>
 
     <!-- Subtask list -->
     <h3>Subtasks:</h3>
-    <ul class="list-group mb-3">
+    <ul class="list-group mb-3 rowList">
       {% for subtask in task.subtasks.all %}
-        <li class="list-group-item">{{ subtask.title }}</li>
+      <li>
+        <a href="{% url 'task:detail_task' subtask.id %}" class="btn btn-outline-primary me-2 mb-2">{{ subtask.title }}</a>
+      </li>
       {% empty %}
         <li class="list-group-item text-muted">No subtasks.</li>
       {% endfor %}
