--- a/tasks/static/tasks/styles.css
+++ b/tasks/static/tasks/styles.css
@@ -13,3 +13,28 @@ li {
   flex-wrap: wrap;
   list-style: none;
 }
+
+/* ========= Footer ========== */
+
+footer {
+  background: linear-gradient(70deg, rgb(24, 24, 24), rgb(25, 29, 29));
+  padding: 1.75rem 0;
+  margin-top: 1rem;
+}
+
+footer ul {
+  display: flex;
+  justify-content: center;
+  /* padding: 40px; */
+}
+
+footer li {
+  width: 3rem;
+  height: 3rem;
+  margin: 0 3.125rem;
+}
+
+footer img {
+  width: 100%;
+  height: 100%;
+}
