--- a/tasks/templates/teams/detail.html
+++ b/tasks/templates/teams/detail.html
@@ -6,52 +6,60 @@
 
     <h1 class="mb-4">Team: {{ team.name }}</h1>
 
-    <!-- Member List | could be changed later if ı want to give more info on the users-->
+    <!-- Member List | could be changed later if ı want to give more info on the users -->
     <h3>Members:</h3>
     {% if team.users.all %}
-    <div class="mb-4">
-      {% for user in team.users.all %}
-        <a href="{% url 'task:detail_user' user.id %}" class="btn btn-outline-primary me-2 mb-2">
-            {{ user.username }} (ID: {{ user.id }})
-        </a>
-      {% endfor %}
-    </div>
+      <div class="mb-4">
+
+        {% for user in team.users.all %}
+          <a href="{% url 'task:detail_user' user.id %}" class="btn btn-outline-primary me-2 mb-2">
+              {{ user.username }} (ID: {{ user.id }})
+          </a>
+        {% endfor %}
+
+      </div>
     {% else %}
-    <p class="text-muted">No users in this team.</p>
+      <p class="text-muted">No users in this team.</p>
     {% endif %}
 
 
     <!-- Task List -->
     <h3>Tasks Assigned to This Team:</h3>
     <ul class="list-group">
+
       {% for task in team.tasks.all %}
         <a href="{% url 'task:detail_task' task.id %}" class="btn btn-outline-primary me-2 mb-2">
             {{ task.title }} (Status {{ task.status }} | ID: {{ task.id }})
         </a>
+
       {% empty %}
-      <li class="list-group-item text-muted">
-        No tasks assigned to this team.
-      </li>
+        <li class="list-group-item text-muted">
+          No tasks assigned to this team.
+        </li>
       {% endfor %}
     </ul>
 
-    <!-- Join or Leave Team -->
+    <!-- Buttons -->
     <div class="mt-4">
       {% if user in team.users.all %}
-        <!-- Leave button -->
+
+        <!-- Leave Team button -->
         <form action="{% url 'task:leave_team' team.id user.userprofile.id %}" method="POST" class="d-inline">
-            {% csrf_token %}
+            {% csrf_token %} <!--NOTE to myself: normally we use it when we use forms (we use it im team-form.html and delete.html) -->
             <button type="submit" class="btn btn-danger">Leave Team</button>
         </form>
+
       {% else %}
-        <!-- Join button -->
+
+        <!-- Join Team button -->
         <form action="{% url 'task:enter_team' team.id user.userprofile.id %}" method="POST" class="d-inline">
             {% csrf_token %}
             <button type="submit" class="btn btn-success">Join Team</button>
         </form>
+
       {% endif %}
 
-      <!-- Always show these -->
+      <!-- Update , Delete Button -->
       <a href="{% url 'task:update_team' team.id %}" class="btn btn-warning me-2">Update</a>
       <a href="{% url 'task:delete_team' team.id %}" class="btn btn-danger">Delete</a>
     </div>
