--- a/tasks/templates/users/user-form.html
+++ b/tasks/templates/users/user-form.html
@@ -1,20 +1,19 @@
-{% extends 'base.html' %}
-
-{% block body %}
+{% extends 'base.html' %} {% block body %}
 <main class="container my-5">
-  <form method="POST" enctype="multipart/form-data" class="card p-4 shadow-sm"> <!-- enctype is necessary for imgs-->
-    {% csrf_token %} <!-- this tag is used for security -->
-    
-    <h4>Account Info</h4>
-    {{ form.as_p}} <!-- changed from "user_form.as_p" -> form.as_p , note to myself: check the tags and dont spend unncesessaary time -->
+  <form method="POST" enctype="multipart/form-data" class="card p-4 shadow-sm">
+    <!-- enctype is necessary for imgs-->
+    {% csrf_token %}
+    <!-- this tag is used for security -->
 
-    
-    {% if profile_form %} <!-- if it is not null(none) -->
-      <hr>
-      <h4>Profile Info</h4>
-      {{ profile_form.as_p }}
-    {% endif %}
-    
+    <h4>Account Info</h4>
+    {{ form.as_p}}
+    <!-- changed from "user_form.as_p" -> form.as_p , note to myself: check the tags and dont spend unncesessaary time -->
+
+    {% if profile_form %}
+    <!-- if it is not null(none) -->
+    <hr />
+    <h4>Profile Info</h4>
+    {{ profile_form.as_p }} {% endif %}
 
     <button type="submit" class="btn btn-primary mt-3">Save</button>
   </form>
