--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -1,72 +1,77 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=;, initial-scale=1.0">
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/pictures/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/pictures/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/pictures/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/pictures/favicon/site.webmanifest">
-    <!--Google Font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <!-- CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'tasks/styles.css' %}">
-    <!-- Site Information -->
-    <title>TaskManager</title>
-</head>
-
-<body>
+    <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=;, initial-scale=1.0">
+      <!-- Favicon -->
+      <link rel="apple-touch-icon" sizes="180x180" href="/pictures/favicon/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/pictures/favicon/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/pictures/favicon/favicon-16x16.png">
+      <link rel="manifest" href="/pictures/favicon/site.webmanifest">
+      <!--Google Font-->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+      <!-- CSS -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+      <link rel="stylesheet" href="{% static 'tasks/styles.css' %}">
+      <!-- Site Information -->
+      <title>TaskManager</title>
+  </head>
+  <body>
     <header>
-        <nav class="navbar navbar-dark bg-dark">
-            <a href="/" class="navbar-brand ms-3">TaskManager</a>
-            
-            <div class="navbar-nav flex-row ms-auto me-3">
-                
-                {% if user.is_authenticated %}<!-- if you try to use get for Logout it will cause security problems sooo use Form instead of <a> -->
-                    <a class="nav-link px-3" href="{% url 'task:create_task' %}">Add Task</a>
-                    <a class="nav-link px-3" href="{% url 'task:create_team' %}">Add Team</a>
-                    
-                    {% if user.userprofile %} <!-- user_profile_context will returns user_profile -->
-                        <a class="nav-link px-3" href="{% url 'task:detail_user' request.user.userprofile.id %}">Your Profile</a>
-                    {% endif %}
+      <nav class="navbar navbar-dark bg-dark">
+        <a href="/" class="navbar-brand ms-3">TaskManager</a>
 
-                    
-                    <form method="POST" action="{% url 'logout' %}" style="display: inline;">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-link nav-link px-3">
-                            Logout
-                        </button>
-                    </form>  
-                {% else %} 
-                    <a class="nav-link px-3" href="{% url 'login' %}">Login</a>
-                    <a class="nav-link px-3" href="{% url 'register' %}">Register</a>
-                {% endif %}
-            </div>
-        </nav>
+        <div class="navbar-nav flex-row ms-auto me-3">
+          {% if user.is_authenticated %}<!-- if you try to use get for Logout it will cause security problems sooo use Form instead of <a> -->
+          <a class="nav-link px-3" href="{% url 'task:create_task' %}"
+            >Add Task</a
+          >
+          <a class="nav-link px-3" href="{% url 'task:create_team' %}"
+            >Add Team</a
+          >
 
-        {% if messages %} <!-- Register Success msg -->
-            {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}">
-                {{ message }}
-            </div>
-               
-            {% endfor %}
-        {% endif %}
+          {% if user.userprofile %}
+          <!-- user_profile_context will returns user_profile -->
+          <a
+            class="nav-link px-3"
+            href="{% url 'task:detail_user' request.user.userprofile.id %}"
+            >Your Profile</a
+          >
+          {% endif %}
 
+          <form
+            method="POST"
+            action="{% url 'logout' %}"
+            style="display: inline"
+          >
+            {% csrf_token %}
+            <button type="submit" class="btn btn-link nav-link px-3">
+              Logout
+            </button>
+          </form>
+          {% else %}
+          <a class="nav-link px-3" href="{% url 'login' %}">Login</a>
+          <a class="nav-link px-3" href="{% url 'register' %}">Register</a>
+          {% endif %}
+        </div>
+      </nav>
+
+      {% if messages %}
+      <!-- Register Success msg -->
+      {% for message in messages %}
+      <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+
+      {% endfor %} {% endif %}
     </header>
-    <p style="color: red;">DEBUG: User is: {{ user }}</p> 
-    <p style="color: red;">Authenticated? {{ user.is_authenticated }}</p>
+    <p style="color: red">DEBUG: User is: {{ user }}</p>
+    <p style="color: red">Authenticated? {{ user.is_authenticated }}</p>
 
     <!-- ====== !!!! ========== -->
-    {% block body %}
-    {% endblock %}
+    {% block body %} {% endblock %}
     <!-- ====== !!!! ========== -->
 
     <footer>
@@ -88,6 +93,5 @@
         </li>
       </ul>
     </footer>
-</body>
-
+  </body>
 </html>
