--- a/tasks/templates/tasks/task-form.html
+++ b/tasks/templates/tasks/task-form.html
@@ -1,9 +1,8 @@
-{% extends 'base.html' %}
-
-{% block body %}
-    <form method="POST">
-        {% csrf_token %} <!-- this tag is used for security -->
-        {{form}}
-        <button type="submit">Save</button>
-    </form>
+{% extends 'base.html' %} {% block body %}
+<form method="POST">
+  {% csrf_token %}
+  <!-- this tag is used for security -->
+  {{form}}
+  <button type="submit">Save</button>
+</form>
 {% endblock %}
