--- a/tasks/templates/teams/team-delete.html
+++ b/tasks/templates/teams/team-delete.html
@@ -1,10 +1,8 @@
-{% extends 'base.html' %}
-
-{% block body %}
+{% extends 'base.html' %} {% block body %}
 <form method="POST">
-    {% csrf_token %} 
-    <h2>Are you sure you want to delete {{ team.name }}</h2>
-    <button type="submit">Confirm</button>
+  {% csrf_token %}
+  <h2>Are you sure you want to delete {{ team.name }}</h2>
+  <button type="submit">Confirm</button>
 </form>
 
 {% endblock %}
