--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,27 +1,29 @@
-{% extends 'base.html' %}
-
-{% block body %}
-<div class="container d-flex justify-content-center align-items-center" style="min-height: 80vh;">
-  <div class="card p-4 shadow" style="min-width: 320px; max-width: 400px; width: 100%;">
+{% extends 'base.html' %} {% block body %}
+<div
+  class="container d-flex justify-content-center align-items-center"
+  style="min-height: 80vh"
+>
+  <div
+    class="card p-4 shadow"
+    style="min-width: 320px; max-width: 400px; width: 100%"
+  >
     <h3 class="text-center mb-4">Login</h3>
 
-    {% if messages %}
-      {% for message in messages %}
-        <div class="alert alert-warning">{{ message }}</div>
-      {% endfor %}
-    {% endif %}
+    {% if messages %} {% for message in messages %}
+    <div class="alert alert-warning">{{ message }}</div>
+    {% endfor %} {% endif %}
 
     <form method="POST">
       {% csrf_token %}
 
       <div class="mb-3">
         <label for="username" class="form-label">Username</label>
-        <input type="text" name="username" class="form-control" required>
+        <input type="text" name="username" class="form-control" required />
       </div>
 
       <div class="mb-3">
         <label for="password" class="form-label">Password</label>
-        <input type="password" name="password" class="form-control" required>
+        <input type="password" name="password" class="form-control" required />
       </div>
 
       <div class="d-grid">
