corrected index.html and admin-index.html also modified their templates

--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -67,8 +67,7 @@
 
       {% endfor %} {% endif %}
     </header>
-    <p style="color: red">DEBUG: User is: {{ user }}</p>
-    <p style="color: red">Authenticated? {{ user.is_authenticated }}</p>
+    <p style="color: red; margin-left:1rem;">User is: {{ user }}</p>
 
     <!-- ====== !!!! ========== -->
     {% block body %} {% endblock %}
